--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "airtable": "^0.5.8",
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "nodemon": "^1.18.10"
   },
@@ -13,6 +14,6 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": "10.x"
+    "node": "11.x"
   }
 }
