--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "fmt": "prettier \"*.js\" --single-quote --no-semi --use-tabs"
   },
   "engines": {
     "node": "11.x"
@@ -21,5 +22,8 @@
     "semi": false,
     "singleQuote": true,
     "trailingComma": "es5"
+  },
+  "devDependencies": {
+    "prettier": "^1.16.4"
   }
 }
